[gd_scene load_steps=2 format=3 uid="uid://char_panel_1"]

[ext_resource type="Script" path="res://scripts/CharacterPanel.gd" id="1_script"]

[node name="CharacterPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="MainPanel" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -650.0
offset_top = -350.0
offset_right = 650.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Sidebar" type="VBoxContainer" parent="MainPanel"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="SidebarTitle" type="Label" parent="MainPanel/Sidebar"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
text = "PARTY SELECTION"
horizontal_alignment = 1

[node name="TabContainer" type="VBoxContainer" parent="MainPanel/Sidebar"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="StatsPanel" type="Panel" parent="MainPanel/Sidebar"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatsLabel" type="RichTextLabel" parent="MainPanel/Sidebar/StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "STATS SUMMARY"

[node name="CharacterSection" type="Panel" parent="MainPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Header" type="Panel" parent="MainPanel/CharacterSection"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="HeroName" type="Label" parent="MainPanel/CharacterSection/Header"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
text = "HERO NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EquipmentLayout" type="HBoxContainer" parent="MainPanel/CharacterSection"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -300.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1

[node name="LeftSlots" type="VBoxContainer" parent="MainPanel/CharacterSection/EquipmentLayout"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MiddleArea" type="Control" parent="MainPanel/CharacterSection/EquipmentLayout"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="PortraitBG" type="ColorRect" parent="MainPanel/CharacterSection/EquipmentLayout/MiddleArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.5)

[node name="RightSlots" type="VBoxContainer" parent="MainPanel/CharacterSection/EquipmentLayout"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="BottomSlots" type="HBoxContainer" parent="MainPanel/CharacterSection"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -260.0
offset_right = 150.0
offset_bottom = -190.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20
alignment = 1

[node name="InventorySection" type="Panel" parent="MainPanel"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="Title" type="Label" parent="MainPanel/InventorySection"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 10.0
offset_bottom = 33.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
text = "BAGS"
horizontal_alignment = 1

[node name="InfoLabel" type="Label" parent="MainPanel/InventorySection"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 35.0
offset_bottom = 58.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 14
text = "Inventory: 0/20"
horizontal_alignment = 1

[node name="FilterButtons" type="HBoxContainer" parent="MainPanel/InventorySection"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 60.0
offset_bottom = 90.0
grow_horizontal = 2
theme_override_constants/separation = 5
alignment = 1

[node name="AllFilter" type="Button" parent="MainPanel/InventorySection/FilterButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "ALL"

[node name="ArmorFilter" type="Button" parent="MainPanel/InventorySection/FilterButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "ARMOR"

[node name="WeaponFilter" type="Button" parent="MainPanel/InventorySection/FilterButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "WEAPON"

[node name="ConsumableFilter" type="Button" parent="MainPanel/InventorySection/FilterButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "CONSUMABLE"

[node name="ScrollContainer" type="ScrollContainer" parent="MainPanel/InventorySection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 100.0
offset_right = -20.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="MainPanel/InventorySection/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 8

[node name="InventoryButtons" type="HBoxContainer" parent="MainPanel/InventorySection"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10
alignment = 1

[node name="AutoEquipButton" type="Button" parent="MainPanel/InventorySection/InventoryButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "AUTO EQUIP"

[node name="SellTrashButton" type="Button" parent="MainPanel/InventorySection/InventoryButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "SELL TRASH"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
text = "RETURN TO WORLD"

